--- a/custom_components/generic_bt/manifest.json
+++ b/custom_components/generic_bt/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "generic_bt",
   "name": "Generic Bluetooth",
-  "codeowners": ["@fuatakgun"],
+  "codeowners": ["@cipher099"],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters"],
   "iot_class": "local_push",
   "integration_type": "hub",
-  "version": "1.0.0",
-  "documentation": "https://github.com/fuatakgun/generic_bt",
-  "issue_tracker": "https://github.com/fuatakgun/generic_bt/issues"
+  "version": "1.0.1",
+  "documentation": "https://github.com/Cipher099/generic_bt",
+  "issue_tracker": "https://github.com/Cipher099/generic_bt/issues"
 }
