--- a/custom_components/generic_bt/manifest.json
+++ b/custom_components/generic_bt/manifest.json
@@ -5,7 +5,7 @@
   "config_flow": true,
   "dependencies": ["bluetooth_adapters"],
   "iot_class": "local_push",
-  "integration_type": "hub",
+  "integration_type": "device",
   "version": "1.0.1",
   "documentation": "https://github.com/Cipher099/generic_bt",
   "issue_tracker": "https://github.com/Cipher099/generic_bt/issues"
