--- a/custom_components/generic_bt/manifest.json
+++ b/custom_components/generic_bt/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "generic_bt",
-  "name": "Generic Bluetooth",
+  "name": "Generic Bluetooth Experiment",
   "codeowners": ["@cipher099"],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters"],
